<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hours_minutes_seconds">%02d:%02d:%02d</string>
    <string name="minutes_seconds">%02d:%02d</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="zero_zero">00:00</string>
    <string name="cover_image">Cover image</string>
    <string name="media_button">Media button</string>
    <string name="could_not_load_this_resource">Could not load this resource</string>
    <string name="cannot_play_this_audio">Cannot play this audio</string>

</resources>