<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/rootCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/albumArtCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/albumArtImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cover_image">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumArtCardView">

            </TextView>

            <TextView
                android:id="@+id/artistTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/artist"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView">

            </TextView>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artistTextView">

            </SeekBar>

            <TextView
                android:id="@+id/currentProgressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/zero_zero"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar">

            </TextView>

            <TextView
                android:id="@+id/maxDurationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/zero_zero"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar">

            </TextView>

            <ImageButton
                android:id="@+id/prevButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/media_button"
                android:src="@drawable/ic_round_skip_previous_24"
                app:layout_constraintBottom_toBottomOf="@+id/playButton"
                app:layout_constraintEnd_toStartOf="@+id/playButton"
                app:layout_constraintTop_toTopOf="@+id/playButton">

            </ImageButton>

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/media_button"
                android:src="@drawable/ic_round_play_arrow_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentProgressTextView">

            </ImageButton>

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/media_button"
                android:src="@drawable/ic_round_skip_next_24"
                app:layout_constraintBottom_toBottomOf="@+id/playButton"
                app:layout_constraintStart_toEndOf="@+id/playButton"
                app:layout_constraintTop_toTopOf="@+id/playButton">

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>